# kalos-eidos

./: .clang-format  .gitignore  README.md  flake.nix  iterative-fib-mem2reg.ll  iterative-fib.ll  meson.build  result  test2.kal  test3.kal  view-cfg.sh
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 8abmldyby5acrq9kry5v4vx1m8zg24m0-source
examples/: test2.kal  test3.kal  test4.kal  test5.kal  test6.kal  test7.kal  test8-driver.cpp  test8.kal
include/: Kaleidoscope.h
src/: cli.cpp  cli.h  compiler.cpp  compiler.h  lexer.cpp  lexer.h  lexer.hpp  main.cpp  parser.cpp  parser.h  utils.cpp  utils.h
